# prk_eventbus

./: Cargo.toml  Readme.md  eventbus.db
examples/: duplicate.rs  multiple_subs.rs  new_test.rs  persistance.rs  stress_test.rs  test.rs
examples/hex_arch/hex_arch_mircroservice/: .env  Cargo.toml  Dockerfile
examples/hex_arch/hex_arch_mircroservice/src/: database_connection.rs  main.rs
examples/hex_arch/hex_arch_mircroservice/src/adapters/http/: http.rs
examples/hex_arch/hex_arch_mircroservice/src/domain/: error.rs
examples/hex_arch/hex_arch_mircroservice/src/domain/models/: mod.rs  todo.rs
examples/hex_arch/hex_arch_mircroservice/src/domain/ports/: mod.rs  todo_repository.rs  user_repository.rs
examples/hex_arch/hex_arch_mircroservice_2/: .gitignore  Cargo.toml  Dockerfile  compose.yaml
examples/hex_arch/hex_arch_mircroservice_2/src/: main.rs
examples/hex_arch/hex_arch_mircroservice_2/src/adapters/http/: http.rs
examples/hex_arch/hex_arch_mircroservice_2/src/application/services/: mod.rs  todo_service.rs  user_service.rs
examples/hex_arch/hex_arch_mircroservice_2/src/domain/: error.rs  mod.rs
examples/hex_arch/hex_arch_mircroservice_2/src/domain/models/: user.rs
examples/hex_arch/hex_arch_mircroservice_2/src/infrastructure/repositories/: mod.rs  sqlx_todo_repository.rs  sqlx_user_repository.rs
src/lib/: lib.rs
src/lib/adapters/: mod.rs  websocket.rs
src/lib/client/: client.rs
src/lib/core/: error.rs  event_bus.rs  message.rs  mod.rs
src/lib/storage/: dummy_storage.rs  mod.rs  sqlite.rs
src/lib/tests/: test.rs
src/lib/transport/: mod.rs  tls.rs
src/server/: main.rs
