[package]
name = "rust_eventbus"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_eventbus"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
tracing = {version = "*", optional = true}
tracing-subscriber = {version = "*",  optional = true, features = ["env-filter"]}
chrono = "0.4"
anyhow = "1.0"
axum-server = { version = "0.5", features = ["rustls", "tls-rustls"] }
tokio-rustls = "0.24"
futures-util = "0.3.31"
rusqlite = { version = "0.29", features = ["bundled"] }
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
uuid = {version = "1.16.0", features = ["serde", "v4"]}

[features]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
